--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 .rooms/
 .avatar
-config.JSON
+config.json
 background.png
 world_stats.json
 
 .screeps_cache
+dist
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
